screen printting material changed

--- a/machinePage_MiMake.html
+++ b/machinePage_MiMake.html
@@ -77,14 +77,17 @@
 
                         <div class="banner-content text-right">
                             <span class="text-white top text-uppercase">KEA Makerlab </span>
-                            <h1 class="text-white text-uppercase">Mi Make Printer</h1>
+                            <h1 class="text-white text-uppercase">RISO GOCCO PRO QS200</h1>
                             <ul>
-                                <li> <i class="fa fa-square-o fa-fw fa-1x"></i>Work Area: A3 frame - 210 x 300 mm // A2 frame – 190 x 210 mm (max print size)  </li>
+                                <li> <i class="fa fa-square-o fa-fw fa-1x"></i>Work Area: 340 x 440 mm  </li>
                                 <li> <i class="fa fa-file fa-fw fa-1x"></i> File Format: PDF </li>
-                                <li> <i class="fa fa-list-alt fa-fw fa-1x"></i> Software: Screen Maker </li>
-                                <li> <i class="fa fa-cut fa-fw fa-1x"></i> Materials: Silk Gaze 70, 120 & 200 gr + Plastic frame (A4 or A3) + Double sided tape
-
-                                </li>
+                                <li> <i class="fa fa-list-alt fa-fw fa-1x"></i> Software: Adobe Acrobat for printing </li>
+                                <br>
+                                <li> <i class="fa fa-cut fa-fw fa-1x"></i> <b>70 mesh:</b> Large-resolution printing, T-shirts and towels, especially coarse-grained ink such as gold ink.</li>
+                                <br>
+                                <li> <i class="fa fa-cut fa-fw fa-1x"></i> <b>120mesh:</b> Medium-resolution, printing textiles solid images and fine text.</li>
+                                <br>
+                                <li> <i class="fa fa-cut fa-fw fa-1x"></i> <b>200mesh:</b> Fine-reslution, printing textiles, plastic, metal etc.</li>
                             </ul>
 
                         </div>
