--- a/machinePage_Riso.html
+++ b/machinePage_Riso.html
@@ -82,9 +82,12 @@
                                 <li> <i class="fa fa-square-o fa-fw fa-1x"></i>Work Area: 340 x 440 mm  </li>
                                 <li> <i class="fa fa-file fa-fw fa-1x"></i> File Format: PDF </li>
                                 <li> <i class="fa fa-list-alt fa-fw fa-1x"></i> Software: Adobe Acrobat for printing </li>
-                                <li> <i class="fa fa-cut fa-fw fa-1x"></i> Materials:  Silk Gaze 70, 120 & 200 gr + Metal Frame + Silicone strips + Roller
-
-                                </li>
+                                <br>
+                                <li> <i class="fa fa-cut fa-fw fa-1x"></i> <b>70 mesh:</b> Large-resolution printing, T-shirts and towels, especially coarse-grained ink such as gold ink.</li>
+                                <br>
+                                <li> <i class="fa fa-cut fa-fw fa-1x"></i> <b>120mesh:</b> Medium-resolution, printing textiles solid images and fine text.</li>
+                                <br>
+                                <li> <i class="fa fa-cut fa-fw fa-1x"></i> <b>200mesh:</b> Fine-reslution, printing textiles, plastic, metal etc.</li>
                             </ul>
 
                         </div>
