Updated textile stp by step guide

--- a/machinePage_Textile.html
+++ b/machinePage_Textile.html
@@ -155,7 +155,7 @@
 
                         <div class="desc">
                             <br>
-                            <a class="text-uppercase view-details" href="https://kea-makerlab.github.io/hello/tutorials/textilePrinter/Punktlektion_MimakiTextileprinter_ENG.pdf">Download</a>
+                            <a class="text-uppercase view-details" href="https://kea-makerlab.github.io/hello/tutorials/textilePrinter/StepManual_ MimakiTextileprinter.pdf">Download</a>
                             <h2 class="text-uppercase">Step By Step Guide PDF</h2>
                             <p>
                                 Follow this detailed step by step guide to go from loading of fabric, to file setup, to print.
