Opening Times Updated

--- a/kea_store.html
+++ b/kea_store.html
@@ -180,7 +180,8 @@
                         <ul class="list-unstyled">
                             <!--<li> <font  color="red"><i class="fa fa-asterisk" aria-hidden="true"></i> <b>COVID-19 Closed.</b> </font></li>-->
                             
-                             <li><i class="fa fa-clock-o fa-fw"></i> <b>Mon-Fri:</b> kl:  14-16</li>
+                             <li><i class="fa fa-clock-o fa-fw"></i> <b>Mon-Thur:</b> kl:  14-16</li>
+                            <li><i class="fa fa-clock-o fa-fw"></i> <b>Fri:</b> CLOSED </li>
                             
                         </ul>
   
