--- a/lab16.html
+++ b/lab16.html
@@ -98,6 +98,12 @@
             </div>
             <!-- /.row -->
         </div>
+        <div class="row">
+                <div class="col-lg-12 text-center">
+        <iframe width='1280' height='720' src='https://my.matterport.com/show/?m=yLJPARoUHy5' frameborder='0' allowfullscreen allow='xr-spatial-tracking'></iframe>
+        
+         </div>
+            </div>
         <!-- /.container -->
     </section>
    
