--- a/labAccess.html
+++ b/labAccess.html
@@ -80,9 +80,9 @@
         <section class="about-area  pb-30">
             <div class="container">
                 <div class="row align-items-center justify-content-between">
-                    <div class="col-lg-6 col-md-12 col-sm-12 about-left pt-30 pb-30">
+                    <div class="col-lg-12 col-md-12 col-sm-12 about-left pt-30 pb-30">
                         <h1 class="text-uppercase">
-                            <span>Video Presentation</span>
+                            <span>Lab access kursus tilgænglig fra 30 Aug! </span>
                         </h1>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
 
                         <div class="desc">
                             <br>
-                            <a class="text-uppercase view-details" href="https://api.socrative.com/rc/eZ2X3D">Start Test</a>
+                            <a class="text-uppercase view-details" href="#">Åbner d. 30 Aug.</a>
                             <h2 class="text-uppercase"></h2>
 <!--
                             
