Fixed Dates and broken labb access link

--- a/labAccess.html
+++ b/labAccess.html
@@ -122,7 +122,7 @@
 
                         <div class="desc">
                             <br>
-                            <a class="text-uppercase view-details" href="#">Åbner d. 30 Aug.</a>
+                            <a class="text-uppercase view-details" href="https://api.socrative.com/rc/eZ2X3D">Åbner d. 30 Aug.</a>
                             <h2 class="text-uppercase"></h2>
 <!--
                             
